# Chlorine

./: .doxyfile  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  default.cl  index.html  makefile  params.json  readme.md
Chlorine/: Chlorine.1  main.cpp
Chlorine.xcodeproj/: project.pbxproj
Chlorine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Chlorine.xcodeproj/project.xcworkspace/xcshareddata/: Chlorine.xccheckout
Chlorine.xcodeproj/project.xcworkspace/xcuserdata/Dropbox.xcuserdatad/: UserInterfaceState.xcuserstate
Chlorine.xcodeproj/xcuserdata/Dropbox.xcuserdatad/xcschemes/: Chlorine.xcscheme  xcschememanagement.plist
chlorine/: chlorine.cpp  chlorine.hpp  clinfo.cpp
chlorine/clinfo/: clinfo.cpp
chlorine/include/: chlorine.hpp  cl.hpp
chlorine/src/: chlorine.cpp
examples/: makefile
examples/mandelbrot/: CMakeLists.txt  makefile  mandelbrot.cl  mandelbrot.cpp  readme.md
examples/msvc/: .gitignore  Chlorine.sln  Chlorine.vcxproj  makefile  readme.md
examples/swap/: CMakeLists.txt  makefile  readme.md  swap.cl  swap.cpp
headers/: chlorine.hpp
headers/include/: worker.hpp
lib/: chlorine.hpp  clinfo.hpp  error.hpp  kernels.hpp  runtime.hpp  utilities.hpp
source/: chlorine.cpp
sources/: chlorine.cpp
src/: chlorine.cpp  clinfo.cpp  kernel.cl
test/: default.cl
tests/: CMakeLists.txt  containers.hpp  default.cl  floats.hpp  helpers.hpp  integers.hpp  robot.cpp  test_floats.cl  test_helpers.cl  test_main.cpp  test_operators.cl  test_primitives.cl  test_scalars.cl  test_suite.hpp  test_vectors.cl  testsuite.cpp  vectors.cpp
tests/kernels/: containers.cl  default.cl  floats.cl  integers.cl  test_helpers.cl  test_integers.cl
